[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "nox>=2022.11.21",
    "pre-commit>=2.21.0",
    "black>=23.3.0",
]

[project]
name = "observe-sentry"
version = "0.0.1"
description = "Sentry.io telemetry via Observatory"
authors = [
    {name = "sharpencrag / Ed Whetstone", email = "ed.whetstone@gmail.com"},
]
dependencies = [
    "observatory>=2.0.0",
    "sentry-sdk>=1.19.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
